src/index.css
/* ... */
/* LIGHT THEMES */
[data-theme='light-brand'] {
  /* SURFACES */
  --base-bg: #efce90;
  --surface-primary: #f5e0ba;
  --surface-primary-hover: #d4c3a2;
  --surface-secondary: #fbf4e5;
  --surface-secondary-hover: #eee7d9;
  --surface-tertiary: #fffbf4;
  --surface-tertiary-hover: #e0d4bd;

  /* TEXT */
  --primary-text: #3d352b;
  --secondary-text: #5e5549;
  --success-text: #14ad00;
  --error-text: #a50000;

  /* BUTTONS */
  --primary-button: #d17600;
  --primary-button-hover: #ba6900;
  --primary-button-text: #ffffff;
  --secondary-button: #ccaf91;
  --secondary-button-hover: #b49a81;
  --secondary-button-text: #000000;

  /* INPUTS */
  --input: #ddc499;
  --placeholder: #4c5053;

  /* MISC */
  --success: #14ad00;
  --success-hover: #129700;
  --error: #c20000;
  --error-hover: #a50000;
  --warning: #f59e0b;
  --warning-hover: #ce860a;
  --link: #4a80ff;
  --link-hover: #1047c6;
}

[data-theme='light-lavender'] {
  /* SURFACES */
  --base-bg: #decfff;
  --surface-primary: #e8deff;
  --surface-primary-hover: #ccc3e0;
  --surface-secondary: #f3eeff;
  --surface-secondary-hover: #d2cdde;
  --surface-tertiary: #fbf9ff;
  --surface-tertiary-hover: #d8d7dc;

  /* TEXT */
  --primary-text: #1a1625;        
  --secondary-text: #554d6b;      
  --success-text: #166534;
  --error-text: #991b1b;

  /* BUTTONS */
  --primary-button: #7c4dff;     
  --primary-button-hover: #651fff;
  --primary-button-text: #ffffff;
  --secondary-button: #c7bada;   
  --secondary-button-hover: #b8acc9;
  --secondary-button-text: #3c2475;

  /* INPUTS */
  --input: #d2c8e1;              
  --placeholder: #6d6482;

  /* MISC */
  --success: #14ad00;
  --success-hover: #129700;
  --error: #c20000;
  --error-hover: #a50000;
  --warning: #f59e0b;
  --warning-hover: #ce860a;
  --link: #4a80ff;
  --link-hover: #1047c6;
}

[data-theme='light-lemongrass'] {
  /* SURFACES */
  --base-bg: #9ff5a9;
  --surface-primary: #d6ffc1;
  --surface-primary-hover: #c6e5b7;
  --surface-secondary: #eeffe6;
  --surface-secondary-hover: #cdd9c8;
  --surface-tertiary: #f6fff3;
  --surface-tertiary-hover: #d6dad4;

  /* TEXT */
  --primary-text: #1c2516;        
  --secondary-text: #586b4d;      
  --success-text: #00a23e;
  --error-text: #d50000;

  /* BUTTONS */
  --primary-button: #00cf0a;     
  --primary-button-hover: #00b509;
  --primary-button-text: #ffffff;
  --secondary-button: #bae19c;   
  --secondary-button-hover: #a9ce8d;
  --secondary-button-text: #26360f;

  /* INPUTS */
  --input: #b9e8a4;              
  --placeholder: #6a8264;

  /* MISC */
  --success: #14ad00;
  --success-hover: #129700;
  --error: #c20000;
  --error-hover: #a50000;
  --warning: #f59e0b;
  --warning-hover: #ce860a;
  --link: #4a80ff;
  --link-hover: #1047c6;
}

[data-theme='light-sky-blue'] {
  /* SURFACES */
  --base-bg: #a4e4ff;
  --surface-primary: #d2f5ff;
  --surface-primary-hover: #c3dbe0;
  --surface-secondary: #ebfeff;
  --surface-secondary-hover: #cddade;
  --surface-tertiary: #f9feff;
  --surface-tertiary-hover: #d7dbdc;

  /* TEXT */
  --primary-text: #162125;        
  --secondary-text: #4d626b;      
  --success-text: #166534;
  --error-text: #991b1b;

  /* BUTTONS */
  --primary-button: #3098ff;     
  --primary-button-hover: #2a7fd5;
  --primary-button-text: #ffffff;
  --secondary-button: #7bd6e2;   
  --secondary-button-hover: #6dbbc5;
  --secondary-button-text: #08393b;

  /* INPUTS */
  --input: #b0d9e6;              
  --placeholder: #647d82;

  /* MISC */
  --success: #14ad00;
  --success-hover: #129700;
  --error: #c20000;
  --error-hover: #a50000;
  --warning: #f59e0b;
  --warning-hover: #ce860a;
  --link: #4a80ff;
  --link-hover: #1047c6;
}

[data-theme='light-white-out'] {
  /* SURFACES */
  --base-bg: #e5e4e4;
  --surface-primary: #eeeeee;
  --surface-primary-hover: #bdbdbd;
  --surface-secondary: #f8f8f8;
  --surface-secondary-hover: #cdcdcd;
  --surface-tertiary: #ffffff;
  --surface-tertiary-hover: #d4d4d4;

  /* TEXT */
  --primary-text: #162125;        
  --secondary-text: #4d626b;      
  --success-text: #166534;
  --error-text: #991b1b;

  /* BUTTONS */
  --primary-button: #171717;     
  --primary-button-hover: #464646;
  --primary-button-text: #ffffff;
  --secondary-button: #bebebe;   
  --secondary-button-hover: #a6a6a6;
  --secondary-button-text: #000000;

  /* INPUTS */
  --input: #bababa;              
  --placeholder: #474747;

  /* MISC */
  --success: #14ad00;
  --success-hover: #129700;
  --error: #c20000;
  --error-hover: #a50000;
  --warning: #f59e0b;
  --warning-hover: #ce860a;
  --link: #4a80ff;
  --link-hover: #1047c6;
}

[data-theme='dark-brand'] {
  /* SURFACES */
  --base-bg: #14130e;
  --surface-primary: #252019;
  --surface-primary-hover: #2a241d;
  --surface-secondary: #3e3328;
  --surface-secondary-hover: #483b2e;
  --surface-tertiary: #5c4a37;
  --surface-tertiary-hover: #6a543d;

  /* TEXT */
  --primary-text: #fff6e8;
  --secondary-text: #cec5b7;
  --success-text: #1ecf5f;
  --error-text: #ff2949;

  /* BUTTONS */
  --primary-button: #f7eee2;
  --primary-button-hover: #c4bdb0;
  --primary-button-text: #000000;
  --secondary-button: #413e3a;
  --secondary-button-hover: #57524c;
  --secondary-button-text: #ffffff;

  /* INPUTS */
  --input: #191514;
  --placeholder: #99a1a7;

  /* MISC */
  --success: #14ad00;
  --success-hover: #129700;
  --error: #de2828;
  --error-hover: #b02b2b;
  --warning: #f59e0b;
  --warning-hover: #ce860a;
  --link: #4a80ff;
  --link-hover: #1047c6;
}
/* ... */

